[package]
name = "tfswitcher"
version = "0.8.0"
edition = "2021"
authors = ["ASleepyCat dyeom340@gmail.com"]
license = "MIT"
description = "A Terraform and OpenTofu version switcher"
readme = "README.md"
repository = "https://github.com/ASleepyCat/tfswitcher"
keywords = ["cli", "terraform", "opentofu", "tfswitcher", "tfswitch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.2"
dialoguer = "0.11.0"
env_logger = "0.10.2"
futures-util = "0.3.30"
home = "0.5.9"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
octocrab = "0.38.0"
pathsearch = "0.2.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
semver = { version = "1.0.17", package = "tf-semver" }
serde = { version = "1.0.203", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["base-0", "full"] }
tfconfig = "0.2.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.16"
zip = "1.1.3"

[dev-dependencies]
html-to-string-macro = "0.2.5"
once_cell = "1.19.0"
tempdir = "0.3.7"
